gccida/g3/subst
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3798:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3798:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3801:4: error: expected ';' after expression
rtx v21; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3801:5: error: use of undeclared identifier 'v21'
rtx v21; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3805:4: error: expected ';' after expression
rtx v25; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3805:5: error: use of undeclared identifier 'v25'
rtx v25; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3806:6: error: use of undeclared identifier 'v26'
rtx *v26; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3813:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3814:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3814:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3815:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3815:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3816:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3816:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3817:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3817:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3823:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3823:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/combine.c:3829:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst/src/obj/combine.o] Error 1
